--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^3.5.3",
-    "nodemon": "^1.11.0",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "nodemon": "^1.11.0"
   }
 }
